--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.4",
     "moment": "^2.19.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
