--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
     "moment": "^2.19.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-icons": "^2.2.5",
+    "react-fontawesome": "^1.6.1",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
